tdf#104717 don't set the primary selection on paste

When pasting, Calc sets a selection for the pasted cells. But this
also includes the primary selection, which is unexpected. And that
will eventually even update the clipboard, if a clipboard manager
is configured to sync primary selection and clipboard.

I actually couldn't find any other application, which select on
paste at all. Normally they just replace a selection. But I guess
this is very known behaviour for spreadsheets. gnumeric at least
changes the primary selection on paste too.

Calc also removes the system selection when clearing the selection.
Other applicatios keep the primary selection valid, until the
application or document closes, so do the same in Calc. We still
clear the selection when we close the view in ~ScTabView().

Change-Id: I816d8caec1e0364fec20266db3fb3c63cf584865
Reviewed-on: https://gerrit.libreoffice.org/73906
Tested-by: Jenkins
Reviewed-by: Eike Rathke <erack@redhat.com>